--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-scikit-learn==1.3.2
-imbalanced-learn==0.11.0
+scikit-learn==1.2.2
+imbalanced-learn==0.10.1
 xgboost==1.7.6
 joblib==1.3.2
 streamlit==1.32.0
-numpy
-pandas
+numpy==1.24.4
+pandas==1.5.3
